graphannis/src/annis/db/corpusstorage/snapshots/graphannis__annis__db__corpusstorage__tests__find_extra_with_alternatives.snap
---
source: graphannis/src/annis/db/corpusstorage/tests.rs
expression: results
---
[
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc1#sTok1",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc1#sTok3",
        alternative: 1,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc1#sTok5",
        alternative: 1,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc1#sTok8",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc2#sTok1",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc2#sTok3",
        alternative: 1,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus1/doc2#sTok8",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus2/doc3#sTok1",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus2/doc3#sTok3",
        alternative: 1,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus2/doc3#sTok8",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus2/doc4#sTok1",
        alternative: 0,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus2/doc4#sTok3",
        alternative: 1,
    },
    MatchExtra {
        match_id: "salt::pos::rootCorpus/subCorpus2/doc4#sTok8",
        alternative: 0,
    },
]
